--- a/Info.plist
+++ b/Info.plist
@@ -6,10 +6,12 @@
 	<string>Japanese</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
+	<key>CFBundleGetInfoString</key>
+	<string>1.0 copyright 2005, Tetsuro KURITA</string>
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>URLUnescape</string>
+	<string>URIEscapeOSAX</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -18,11 +20,9 @@
 	<string>osax</string>
 	<key>CFBundleSignature</key>
 	<string>ascr</string>
-	<key>CSResourcesFileMapped</key>
-	<true/>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
-	<key>CFBundleGetInfoString</key>
-	<string>1.0 copyright 2005, Tetsuro KURITA</string>
+	<key>CSResourcesFileMapped</key>
+	<true/>
 </dict>
 </plist>
