--- a/Info_10_6.plist
+++ b/Info_10_6.plist
@@ -9,11 +9,11 @@
 	<key>CFBundleVersion</key>
 	<string>3</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>copyright 2005-2009, Tetsuro KURITA</string>
+	<string>for 10.6 copyright 2005-2010, Tetsuro KURITA</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.3.1</string>
+	<string>1.3.2</string>
 	<key>CFBundleGetInfoString</key>
-	<string>1.3.1 copyright 2005-2009, Tetsuro KURITA</string>
+	<string>1.3.2 for 10.6 copyright 2005-2010, Tetsuro KURITA</string>
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
