--- a/Info_10_5.plist
+++ b/Info_10_5.plist
@@ -7,17 +7,15 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleVersion</key>
-	<string>4</string>
+	<string>5</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>for 10.5 copyright 2005-2010, Tetsuro KURITA</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.3.2</string>
 	<key>CFBundleGetInfoString</key>
 	<string>1.3.2 copyright 2005-2010, Tetsuro KURITA</string>
-	<key>CFBundleIconFile</key>
-	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>URIEscapeOSAX</string>
+	<string>Scriptfactory.osax.URIEscape</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
