--- a/Info_10_6.plist
+++ b/Info_10_6.plist
@@ -7,13 +7,13 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleVersion</key>
-	<string>5</string>
+	<string>6</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>for 10.6 copyright 2005-2010, Tetsuro KURITA</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.3.2</string>
+	<string>${PRODUCT_VERSION}</string>
 	<key>CFBundleGetInfoString</key>
-	<string>1.3.2 for 10.6 copyright 2005-2010, Tetsuro KURITA</string>
+	<string>${PRODUCT_VERSION} for 10.6 copyright 2005-2010, Tetsuro KURITA</string>
 	<key>CFBundleIdentifier</key>
 	<string>Scriptfactory.osax.URIEscape</string>
 	<key>CFBundleInfoDictionaryVersion</key>
